// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex interceptor should call method-level interceptor correctly (GET) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Complex interceptor should call method-level interceptor correctly (GET) 2`] = `"ab"`;

exports[`Interceptor inject: should call all interceptor in correct order 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor inject: should call all interceptor in correct order 2`] = `"abcd"`;

exports[`Interceptor inject: should call all interceptor in correct order 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call controller-level interceptor correctly 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor inject: should call controller-level interceptor correctly 2`] = `"abcd"`;

exports[`Interceptor inject: should call controller-level interceptor correctly 3`] = `""`;

exports[`Interceptor inject: should call method-level interceptor correctly (ALL) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (ALL) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (ALL) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (DELETE) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (DELETE) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (DELETE) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (GET) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (GET) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (GET) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (HEAD) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (HEAD) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (HEAD) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (PATCH) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (PATCH) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (PATCH) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (POST) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (POST) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (POST) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor inject: should call method-level interceptor correctly (PUT) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Interceptor inject: should call method-level interceptor correctly (PUT) 2`] = `"abcd"`;

exports[`Interceptor inject: should call method-level interceptor correctly (PUT) 3`] = `"cargdeargdearg2"`;

exports[`Interceptor: should call all interceptor in correct order 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should call all interceptor in correct order 2`] = `"abc"`;

exports[`Interceptor: should call controller-level interceptor correctly 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should call controller-level interceptor correctly 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (ALL) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (ALL) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (DELETE) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (DELETE) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (GET) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (GET) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (HEAD) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Interceptor: should call method-level interceptor correctly (HEAD) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (PATCH) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (PATCH) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (POST) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (POST) 2`] = `"abc"`;

exports[`Interceptor: should call method-level interceptor correctly (PUT) 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Interceptor: should call method-level interceptor correctly (PUT) 2`] = `"abc"`;

exports[`Interceptor: should call server-level interceptor correctly 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should call server-level interceptor correctly 2`] = `"abc"`;

exports[`Interceptor: should compose controller- and method-level interceptor 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should compose controller- and method-level interceptor 2`] = `"ab"`;

exports[`Interceptor: should resolve controller-level interceptor 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should resolve controller-level interceptor 2`] = `"ab"`;

exports[`Interceptor: should resolve method-level interceptor 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptor: should resolve method-level interceptor 2`] = `"ab"`;
